# macro-benches

./: .gitignore  Makefile  README.md  TODO.md  dune  dune-project  dune-workspace  macro-bench-alt-ergo.opam  macro-bench-alt-ergo.opam.template  macro-bench-coq.opam  macro-bench-coq.opam.template  macro-bench-decompress.opam  macro-bench-devkit.opam  macro-bench-devkit.opam.template  macro-bench-eio.opam  macro-bench-irmin.opam  macro-bench-jsoo.opam  macro-bench-liquidsoap-lang.opam  macro-bench-liquidsoap-lang.opam.template  macro-bench-menhir.opam  macro-bench-ocamlformat.opam  macro-bench-owl.opam  macro-bench-owl.opam.template  macro-bench-pplacer.opam  macro-bench-pplacer.opam.template  macro-benches.opam.locked  sources.yml
benchmarks/ahrefs-devkit/: ahrefs-devkit.build.sh  dune  gzip_bench.ml  htmlStream_bench.ml  network_bench.ml  stre_bench.ml
benchmarks/alt-ergo/: alt-ergo.build.sh
benchmarks/coq/: coq.build.sh  coq_corelib_stress.v
benchmarks/cpdf/: cpdf.build.sh
benchmarks/decompress/: decompress.build.sh  dune  test_decompress.ml
benchmarks/dune-bootstrap/: dune-bootstrap.build.sh
benchmarks/eio/: dune  eio.build.sh  eio_bench.ml
benchmarks/irmin/: dune  irmin.build.sh  irmin_mem_rw.ml
benchmarks/js_of_ocaml/: gen_workload.sh  jsoo.build.sh  workload.byte  workload.cmi  workload.cmo  workload.ml
benchmarks/liq-video-frames/: dune  liq-video-frames.build.sh  liq_video_frames.ml
benchmarks/liquidsoap-lang/: dune  liq_bench.ml  liquidsoap-lang.build.sh
benchmarks/menhir/: menhir.build.sh  sysver.mli
benchmarks/merlin/: UPSTREAM_BUG.md  dune  merlin.build.sh  merlin_bench.ml
benchmarks/ocamlc-self-compile/: ocamlc-self-compile.build.sh
benchmarks/ocamlformat/: ocamlformat.build.sh  workload.ml  workload_5x.ml
benchmarks/owl/: dune  owl.build.sh  owl_gc.ml
benchmarks/pplacer/: pplacer.build.sh
benchmarks/sedlex/: dune  sedlex.build.sh  sedlex_bench.ml
benchmarks/yojson/: dune  ydump_repeat.ml  yojson.build.sh
benchmarks/zarith/: dune  zarith.build.sh
dune-overlays/camlpdf/: dune  dune-project
dune-overlays/cpdf-source/: dune  dune-project
dune-overlays/libevent/: dune  dune-project
dune-overlays/ocurl/: config.h  dune  dune-project
dune-overlays/zarith/: dune  dune-project
results/: 2026-05-01-fp-flambda-5.4.1-vs-d8bb46c-obelisk.md  2026-05-01-fp-flambda-5.4.1-vs-d8bb46c.md  2026-05-04-fp-flambda-5.4.1-vs-d8bb46c-monolith.md  2026-05-06-fp-flambda-5.4.1-vs-d8bb46c-summary.md  2026-05-11-offheap-M-o-sweep-monolith.md
results/latest/: 2026-05-16-full-s-o-sweep-monolith.md
scripts/: setup-monorepo.sh  vendor-alt-ergo.sh  vendor-coq.sh  vendor-cpdf.sh  vendor-devkit-deps.sh  vendor-menhir.sh  vendor-pplacer.sh
