; Hand-written dune file for camlpdf (upstream uses OCamlMakefile).
; Module list from Makefile PDFMODS + C stubs.
;
; Note: miniz.c is #include'd by flatestubs.c, not compiled separately.
; We list it as an extra_objects dependency so dune copies it to the build dir.

(library
 (name camlpdf)
 (public_name camlpdf)
 (wrapped false)
 (modules
   pdfe pdfutil pdfio pdftransform pdfunits pdfpaper
   pdfcryptprimitives pdf pdfcrypt pdfflate pdfcodec pdfwrite pdfgenlex
   pdfread pdfjpeg pdfops pdfdest pdfmarks pdfpagelabels pdftree pdfst pdfpage
   pdfannot pdffun pdfspace pdfimage pdfafm pdfafmdata pdfglyphlist pdfcmap
   pdftext pdfstandard14 pdfdate pdfocg pdfmerge)
 (foreign_stubs
  (language c)
  (names flatestubs rijndael-alg-fst stubs-aes sha2 stubs-sha2)
  (flags (:standard -g))
  (extra_deps miniz.c miniz.h))
 (ocamlopt_flags (:standard -safe-string))
 (ocamlc_flags (:standard -safe-string)))
